k8s/istio/argocd/argocd-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gw
  namespace: default
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-80
      protocol: HTTP
    hosts:
    - "argocd.rezz.io"

  - port:
      number: 443
      name: https-443
      protocol: HTTPS
      hosts:
        - "argocd.rezz.io"
      tls:
        mode: SIMPLE
        credentialName: argocd-server-tls
