k8s/istio/argocd/argocd-tls-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-tls-vs
  namespace: default
spec:
  hosts:
  - "argocd.rezz.io"
  gateways:
  - argocd-gw
  tls:
  - match:
    - port: 443
      sniHosts:
      - "argocd.rezz.io"
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 443
      weight: 100
