k8s/istio/argocd/argocd-tls-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-tls-vs
  namespace: istio-system
spec:
  exportTo:
    - "."
  hosts:
  - "argocd.rezz.io"
  gateways:
  - argocd-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 443
      weight: 100
